[package]
name = "baris"
version = "0.1.0"
authors = ["David Reed <david@ktema.org>"]
edition = "2021"
license = "BSD-2-Clause"
description = "Async Salesforce API interactions"
readme = "README.md"
homepage = "https://github.com/davidmreed/baris"
repository = "https://github.com/davidmreed/baris"
keywords = ["salesforce"]

[dependencies]
reqwest = {version = "0.11", features = ["json", "stream"]}
serde="1.0.104"
serde_json="1.0"
serde_derive="1.0"
serde_urlencoded="0.7.0"
anyhow="1.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
tokio-util = { version = "0.6.9", features = ["io"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"]}
async-trait = "0.1"
async-stream = "0.3.2"
futures = "0.3"
itertools = "0.10"
bytes = "1.1.0"
csv-async = { version = "1.2.4", features = ["with_serde", "tokio"] }

[lib]
name = "baris"
path = "src/lib.rs"
