[package]
name = "console"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

iced = { version = "0.9", features = ["tokio"] }
iced_native = { version = "0.10" }
baris = { path = ".." }
reqwest = { version = "0.11", features = ["json", "stream"] }
anyhow="1.0"
serde_derive="1.0"
serde="1.0.104"
serde_json="1.0"
csv = "1.1"
