[package]
name = "oxideforce"
version = "0.1.0"
authors = ["David Reed <david@ktema.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.3", features = ["json"]}
serde="1.0.104"
serde_json="1.0"
serde_derive="1.0"
anyhow="1.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"
csv = "1.1"
chrono = { version = "0.4", features = ["serde"]}

[lib]
name = "oxideforce"
path = "src/lib.rs"
