[package]
name = "sift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oxideforce = { path = "../oxideforce" }
anyhow="1.0"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread", "time", "sync"] }
tokio-stream = "0.1"